--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-header {
-  background: url(C:\Users\Saykyo\Desktop\AppkaZaliczenie\zamowienia\public\assets\salatka.jpg);
+  background: url(/public/assets/salata.png);
   background-size: 100%;
   background-position: 0 -250px;
   height: 500px;
